--- a/www/templates/show/power_data_show.html
+++ b/www/templates/show/power_data_show.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    12345
+    电力
 {% endblock %}
 {% block CSS %}
     <style>
@@ -88,7 +88,7 @@
             -->
         <div style="background-color: #ecf0f5"><span style="margin-left: 200px">新旧行业用电量占比--全国</span><span
                 style="margin-left: 450px">行业用电量排名--全国</span></div>
-        <div style="width: 100%;height: 300px;">
+        <div id="top4" style="width: 100%;height: 300px;">
             <div class="new_old_top1">
                 <span id="time_search">
                     <div id="key_num_select1" style="width: 120px;height: 30px">
@@ -122,7 +122,7 @@
                     </div>
                 </div>
             </span>
-                <div id="test1" style="width: 277px;height: 270px;">1213</div>
+                <div id="test1" style="width: 277px;height: 260px;background: #01ff70;">1213</div>
             </div>
             <div class="new_old_top2">
                 <span id="time_search">
@@ -162,13 +162,14 @@
             </span>
                 <div id="old_ind_top10" style="width: 417px;height: 300px;"></div>
             </div>
-
         </div>
         <!--地图-->
         <div id="power_index">
             <div id="main" class="china_and_child_map"></div>
             <div id="main1" class="china_and_child_map" style="display: none;height: 500px"><h1>878</h1></div>
-
+{#            <span style="width: 725px;height: 20px;background: #ecf0f5;float: left;position: relative">新旧动能行业用电量指数-全国#}
+{#            <span style="margin-right: 20px;position: relative;float: right">新旧动能行业GDP能耗指数</span>#}
+{#            </span>#}
             <div id="new_pow_index" class="power_num" style=""></div>
             <div id="old_pow_index" class="power_num" style=""></div>
             <div class="GDP_num">3</div>
@@ -182,7 +183,7 @@
             src="{{ url_for('static', filename='datatables.net-bs/js/dataTables.bootstrap.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename = 'js/echarts.min.js') }}"></script>
     <!-- 导入my JS 文件 -->
-    <script type="text/javascript" src="{{ url_for('static', filename='new_old_pow/china_new_old.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='new_old_pow/new_old_proportion.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='new_old_pow/new_old_pow_top10.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='new_old_pow/china_map.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='new_old_pow/new_old_index.js') }}"></script>
