修改新旧动能行业用电量指数

--- a/www/templates/show/power_data_show.html
+++ b/www/templates/show/power_data_show.html
@@ -170,9 +170,9 @@
 {#            <span style="width: 725px;height: 20px;background: #ecf0f5;float: left;position: relative">新旧动能行业用电量指数-全国#}
 {#            <span style="margin-right: 20px;position: relative;float: right">新旧动能行业GDP能耗指数</span>#}
 {#            </span>#}
-            <div id="new_pow_index" class="power_num" style=""></div>
+{#            <div id="new_pow_index" class="power_num" style=""></div>#}
             <div id="old_pow_index" class="power_num" style=""></div>
-            <div class="GDP_num">3</div>
+{#            <div class="GDP_num">3</div>#}
             <div class="GDP_num" style="background-color: deepskyblue">4</div>
             <div id="growth_rate">行业用电量增速</div>
         </div>
