完成占比、增速模块

--- a/www/templates/show/power_data_show.html
+++ b/www/templates/show/power_data_show.html
@@ -13,7 +13,7 @@
 {% block main %}
     <link rel="stylesheet"
           href="{{ url_for('static', filename='datatables.net-bs/css/dataTables.bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='new_old_pow/china_new_old.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='my_js/new_old_pow/china_new_old.css') }}">
 
     <section class="panel">
         <!--
@@ -177,12 +177,12 @@
             src="{{ url_for('static', filename='datatables.net-bs/js/dataTables.bootstrap.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename = 'js/echarts.min.js') }}"></script>
     <!-- 导入my JS 文件 -->
-    <script type="text/javascript" src="{{ url_for('static', filename='new_old_pow/new_old_proportion.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='new_old_pow/new_old_pow_top10.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='new_old_pow/china_map.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='new_old_pow/new_old_index.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='new_old_pow/new_old_augment_speed.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='new_old_pow/aug.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='my_js/new_old_pow/new_old_proportion.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='my_js/new_old_pow/new_old_pow_top10.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='my_js/new_old_pow/china_map.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='my_js/new_old_pow/new_old_index.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='my_js/new_old_pow/new_old_augment_speed.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='my_js/new_old_pow/aug.js') }}"></script>
     <!---->
 
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
