--- a/www/templates/show/power_tour_index.html
+++ b/www/templates/show/power_tour_index.html
@@ -17,7 +17,7 @@
 
         #chengde_map {
             width: 40%;
-            height: 600px;
+            height: 900px;
             background: gray;
             float: left;
         }
@@ -30,23 +30,23 @@
         }
 
         #tour {
-            width: 45%;
+            width: 40%;
             height: 300px;
             background: whitesmoke;
             float: left;
         }
 
         .inds_use_pow_speed {
-            width: 55%;
+            width: 30%;
             height: 300px;
             {#background: indianred;#}
-            float: left;
+            float: right;
         }
 
-        #num {
+        #peo_inc {
             width: 60%;
             height: 300px;
-            background: red;
+            {#background: red;#}
             float: left;
 
         }
@@ -54,7 +54,7 @@
         #tour_index {
             width: 60%;
             height: 300px;
-            background: #0d6aad;
+            {#background: #0d6aad;#}
             float: right;
         }
 
@@ -70,8 +70,11 @@
 
     <section class="panel all_back_color">
         <div id="all">
+            <div id="chengde_map">
+                <img src="{{ url_for('static', filename='img/cheng_de.png') }}" alt="">
+            </div>
             <div id="proportion_and_speed">
-                <div id="tour">
+                <div id="tour" style="display: none">
                     <div class="nav-topSelect">
                         <select class="form-control select2" tabindex="-1" aria-hidden="true" id="pow_proportion"
                                 style="height:20px;width: 180px">
@@ -84,11 +87,10 @@
                     <div id="tour_main" style="width: 100%;height: 300px;"></div>
                 </div>
                 <div class="inds_use_pow_speed" id="tour_speed">行业用电增速</div>
+                <div class="inds_use_pow_speed" id="need_speed">行业用电需求增速</div>
             </div>
-            <div id="chengde_map">
-                <img src="{{ url_for('static', filename='img/cheng_de.png') }}" alt="">
-            </div>
-            <div id="num">旅游人数、收入</div>
+
+            <div id="peo_inc">旅游人数、收入</div>
             <div id="tour_index">旅游发展指数</div>
         </div>
 
@@ -103,6 +105,9 @@
     <!-- 导入my JS 文件 -->
     <script type="text/javascript" src="{{ url_for('static', filename='my_js/cheng_de_js/cd_use_pow_proportion.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='my_js/cheng_de_js/cd_tour_speed.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='my_js/cheng_de_js/cd_dev_index.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='my_js/cheng_de_js/cd_poeple_income.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='my_js/cheng_de_js/cd_need_speed.js') }}"></script>
 
 
 
